[package]
name = "site"
version = "0.1.0"
authors = ["alex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
server = { git = "https://github.com/alexklokov/webServer" }
gearrs = { git = "https://github.com/alexklokov/Gearrs" }
